sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
  var echanges = false
  while(!echanges){
    label:
    echanges = true
    for(i<-0 to getNombreValeurs()-2){
      if(!plusPetit(i,i+1)){
        echange(i,i+1)
        echanges = false
      }
      else{
        goto label
      }
    }
  }
}